[package]
name = "wownav-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.12.1", features=["derive"]}
pretty_env_logger = "0.4"
log = "0.4"

[dev-dependencies]
insta = "1.21.0"
ctor = "0.1.23"