[package]
name = "wownav-parser"
version = "0.1.0"
edition = "2021"
description = "A mmap parser written in Rust focusing on Trinitycore/vmangos .mmap/.mmtile files"
license-file = "LICENSE.txt"
repository = "https://github.com/iraizo/wownav-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.12.1", features=["derive"]}
pretty_env_logger = "0.4"
log = "0.4"
anyhow = "1.0.65"

[dev-dependencies]
insta = "1.21.0"
ctor = "0.1.23"